# meng-yue-dcbot

./: .gitignore  Dockerfile  config.py  deepseek的筆記.md  main.py  pyproject.toml  角色扮演性統設計規劃.md  角色扮演系統實作紀錄.md
.github/: ghcr-publish.yml
commands/: daily_query.py  menu_manage.py  ping.py  profile.py  role_manage.py  rpg_info.py  rpg_start.py  rpg_status.py
database/: daily_content_db.py  role_db.py  rpg_db.py  trpg_db.py  user_base_db.py
events/: daily_message.py  new_day.py  on_message.py  role_check.py  sign_in.py  trpg_action.py  trpg_listener.py  trpg_world_gen.py
utils/: __init__.py  trpg_ai_client.py  trpg_dice.py
